# unicode-locale-parser

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: parse_language_id.rs  parse_locale_id.rs
examples/: parse.rs
src/: constants.rs  errors.rs  extensions.rs  lang.rs  lib.rs  locale.rs  measure.rs  shared.rs  subdivision.rs  subtag.rs  subtags.rs  utils.rs
src/extensions/: other.rs  pu.rs  transformed.rs  unicode_locale.rs
