[package]
name = "unicode-locale-parser"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kazupon/unicode-locale-parser"
readme = "README.md"
license = "MIT"
categories = ["internationalization"]
include = [
  "src/**/*",
  "benches/*.rs",
  "Cargo.toml",
  "LICENSE",
  "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parse_language_id"
harness = false

[[bench]]
name = "parse_locale_id"
harness = false