[package]
name = "unicode-locale-parser"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kazupon/unicode-locale-parser"
authors = ["Kazuya Kawaguchi <kawakazu80@gmail.com>"]
description = "The parser for Unicode Locale Identifiers"
license = "MIT"
readme = "README.md"
categories = ["internationalization"]
include = [
  "src/**/*",
  "benches/*.rs",
  "Cargo.toml",
  "LICENSE",
  "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook"] }
criterion = "0.5.1"

[[bench]]
name = "parse_language_id"
harness = false

[[bench]]
name = "parse_locale_id"
harness = false
